# gym-agro-carbon-v1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
articles/neurips26/configs/: test_full_dynamic_fully.yaml
articles/neurips26/configs/full_compliance/: scenario_1_easy_det.yaml  scenario_2_easy_stoch.yaml  scenario_3_hard_det.yaml  scenario_4_hard_stoch.yaml
articles/neurips26/configs/low_compliance/: scenario_1_easy_det.yaml  scenario_2_easy_stoch.yaml  scenario_3_hard_det.yaml  scenario_4_hard_stoch.yaml
articles/neurips26/configs/med_compliance/: scenario_1_easy_det.yaml  scenario_2_easy_stoch.yaml  scenario_3_hard_det.yaml  scenario_4_hard_stoch.yaml
articles/neurips26/scripts/: compare_backend_runtime.py  run_compliance_analysis.py  run_experiment.py
examples/: run_basic_agrocarbon.py
gama_models/EcoSysML/models/: EcoSysMLBehavior.gaml  EcoSysMLStructure.gaml  main.gaml
src/contextual_stat_rl/environments/: gama_register.py  register.py
src/contextual_stat_rl/environments/BatchContextualMDPs_discrete/: BatchContextualMDP.py
src/contextual_stat_rl/environments/ContextualMDPs_discrete/: agroCarbonTreeMDP.py  contextualMDP.py  contextual_gama_env.py
src/contextual_stat_rl/experiments/: oneRun.py  sequential_experiment.py
tests/: test_dynamic_context_rl_cycle.py  test_fully_contextual_transitions.py  test_handshake.py  test_mini_contextual_reward_experiment.py  test_mini_experiment.py  test_mini_fully_contextual_experiment.py  test_rl_cycle.py  test_rl_learners.py
(+8 files in other folders)
