[project]
name = "contextual-stat-rl"
version = "0.1.0"
description = "A Gym environment connecting GAMA ABM for MDP instantiation"
authors = [
    {name = "Cheikhou Akhmed KANE",email = "cheikhou.kane@urdfs.edu.sn"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy (==1.24.3)",
    "statisticalrl (==2.2507)",
    "gama-client (>=1.2.4,<2.0.0)",
    "gama-gymnasium (>=1.0.1,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
